--- a/decouverte_html/css/styles.css
+++ b/decouverte_html/css/styles.css
@@ -3,7 +3,7 @@ h1 {
   background-color: aqua;
 }
 body {
-  background-color: blue;
+  background-color: white;
   padding-right: 100;
   rotate: 90;
 }
