--- a/cours-html/site_marco/style.css
+++ b/cours-html/site_marco/style.css
@@ -8,6 +8,7 @@ header {
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid black;
+  background-color: #bbd0ff;
 }
 h3 {
   font-family: "Caveat", cursive;
@@ -71,5 +72,133 @@ header div h3 a {
 }
 .right a:hover {
   color: black;
+  text-decoration: underline;
+}
+
+#mainpage {
+  font-family: "Caveat", cursive;
+  background-color: #c8b6ff;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 60px;
+  border-bottom: 2px solid black;
+}
+#main1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-center;
+
+  font-family: "Amatic SC", sans-serif;
+  font-size: 28px;
+}
+
+#main2 {
+  font-family: "Amatic SC", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  font-size: 28px;
+}
+
+#main3 {
+  font-family: "Amatic SC", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  font-size: 28px;
+}
+#main3 div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+#main2 div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+#main1 div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+#main2 div svg {
+  width: 100px;
+}
+#main1 div svg {
+  width: 100px;
+}
+#main3 div svg {
+  width: 100px;
+}
+
+#standard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 25px;
+  background-color: #ffd6ff;
+
+  border-bottom: 2px solid black;
+  padding-left: 350px;
+}
+
+#qualite {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#standard svg {
+  width: 230px;
+}
+
+#standard div p {
+  font-size: 30px;
+  font-family: "Amatic SC", sans-serif;
+  padding-right: 350px;
+}
+footer {
+  background-color: #fcf6bd;
+  display: flex;
+  padding-left: 500px;
+}
+footer h3 {
+  border-bottom: 2px solid black;
+  margin-bottom: 50px;
+}
+
+footer div div {
+  display: flex;
+  justify-content: center;
+}
+
+footer div div div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  font-size: 30px;
+  font-family: "Amatic SC", sans-serif;
+  padding-left: 40px;
+  font-weight: bold;
+  padding-bottom: 40px;
+}
+
+footer div div svg {
+}
+
+footer div div div a {
+  text-decoration: none;
+  color: black;
+  font-family: "Caveat", cursive;
+}
+
+footer div div div a:hover {
   text-decoration: underline;
 }
